Deep-dive GC bookkeeping evolution: Card Table → RSet → Mark Bitmap → SATB → ZGC
Rewrite section 6.3 of GC bookkeeping doc as a connected evolution narrative
instead of standalone summary tables. Each data structure is explained with:
- the specific problem it was born to solve
- how it's actually filled (write barrier mechanics) and read (GC consumption)
- where it physically lives (native memory vs heap)
- what new limitation it created that drove the next evolution

Adds: pmap fundamentals, G1GC recap, ZGC internals, colored pointer mechanics,
multi-mapping with MMU routing, pmap-vs-RSS measurement truth table,
forwarding table self-healing, G1↔ZGC migration checklist.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>